<resources>
    <string name="app_name">TG_Patient_Profile</string>
    <string name="main_activity_solgan">Take care of your patients</string>
    <string name="web_client_id">274677794777-fu1sosmmrqm4bgvmkf76gdc3v430d03v.apps.googleusercontent.com</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome__marilyn___string">Welcome, Marilyn !</string>
    <string name="new_patient_string">New Patient</string>
    <string name="patient_list_ek1_string">Patient List</string>
    <string name="daily_report_ek1_string">Daily Report</string>
    <string name="edit_patient_data_string">Edit Patient Data</string>
    <string name="view_activity_data_string">View Activity Data</string>
    <string name="associate_radar_string">Associate Radar</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="choose_diff_patient">&lt; Choose a Different Patient</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="status_ok">(Status: <font fgcolor="#00FFFF">OK</font>)</string>
    <string name="status_ok_white">(<font fgcolor="#FFFFFF">Status: OK)</font></string>
    <string name="activity_suggestin_alert">Guardian suggests you physically check up on <b>Benjamin</b> to confirm these behaviours. In case you are unable, please call <b>Benjamin</b> personally.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="collection">Collection</string>
    <string name="inbox">Inbox</string>
    <string name="new_user">New User</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="others">Others</string>
    <string name="verified">Verified</string>
    <string name="welcome_caretaker">Welcome, Caretaker</string>
    <string name="welcome_admin">Welcome, Administrator</string>
    <string name="welcome_nurse">Welcome, Nurse</string>
    <string name="confirm_incident_text">  ·   <b>Recorded Time</b>: 09:49 \n \n ·   Lying face down. \n \n             ·   No movement detected over 15 minutes</string>
    <string name="confirm_incident_verified_by"><b>Incident verified by:</b> <font fgcolor="#FF0B98C5"> Jay Reece</font></string>
    <string name="false_alert_verified_by"><b>False alert verified by:</b> <font fgcolor="#FF0B98C5"> Jay Reece</font></string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone">Phone</string>
    <string name="under_care_of">Under Care of</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="log_activity">Log Activity</string>
    <string name="activity_type">Activity Type</string>
    <string name="specify_activity">Specify Activity</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_comment">Add a Comment…</string>
    <string name="reporting_as">Reporting As</string>
    <string name="assign_nurse">Assign Nurse</string>
    <string name="assigned_nurses">Assigned Nurses</string>
    <string name="back">Back</string>
    <string name="health_details">Health Details</string>
    <string name="care_plan">Care Plan</string>
    <string name="_1_care_plan_type">1.Care Plan Type:</string>
    <string name="home">Home</string>
    <string name="hospital">Hospital</string>
    <string name="_2_nutrition_and_hydration">2.Nutrition and Hydration:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="na">NA</string>
    <string name="_3_support_requirements">3.Support requirements:</string>
    <string name="bathroom">Bathroom</string>
    <string name="activities">Activities</string>
    <string name="walking">Walking</string>
    <string name="self_care">Self-care</string>
    <string name="shopping">Shopping</string>
    <string name="_4_diet_timings">4.Diet timings:</string>
    <string name="breakfast_8am">Breakfast – 8am</string>
    <string name="lunch_12pm">Lunch – 12pm</string>
    <string name="supper_6pm">Supper – 6pm</string>
    <string name="_5_drink_likes">5.Drink Likes:</string>
    <string name="coffee">Coffee</string>
    <string name="water">Water</string>
    <string name="tea">Tea</string>
    <string name="_6_sleep_pattern">6.Sleep pattern:</string>
    <string name="_10pm_6am">10pm - 6am</string>
    <string name="_8pm_4pm">8pm - 4pm</string>
    <string name="_11pm_7am">11pm - 7am</string>
    <string name="_7_pain">7.Pain:</string>
    <string name="chronic">Chronic</string>
    <string name="massage_required">Massage required</string>
    <string name="heat_pack">Heat Pack</string>
    <string name="pillow_support">Pillow Support</string>
    <string name="_8_pain_score_recording_required_the_higher_the_number_the_more_painful_it_is">8. Pain score recording required (The higher the number, the more painful it is)</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_9_behaviour_management">9.Behaviour management:</string>
    <string name="doll_therapy">Doll therapy</string>
    <string name="pet_therapy">Pet therapy</string>
    <string name="dementia_management">Dementia management</string>
    <string name="lights_on_bedroom">Lights on bedroom</string>
    <string name="lights_on_bathroom">Lights on bathroom</string>
    <string name="submit">Submit</string>
    <string name="care_plan_summary">Care Plan Summary</string>
    <string name="summary">Summary</string>
    <string name="care_plan_type">Care Plan Type:</string>
    <string name="loading_data_from_database">Loading data from database...</string>
    <string name="nutrition_and_hydration">Nutrition and Hydration:</string>
    <string name="support_requirements">Support requirements:</string>
    <string name="bath_toilets">Bath/Toilets</string>
    <string name="diet_timings">Diet timings:</string>
    <string name="drink_likes">Drink Likes:</string>
    <string name="sleep_pattern">Sleep pattern:</string>
    <string name="_8pm_4am">8pm - 4am</string>
    <string name="pain">Pain:</string>
    <string name="pain_score">Pain Score</string>
    <string name="behavioural_management">Behavioural Management</string>
    <string name="test_notifications">Test: Notifications</string>
    <string name="test_health_data">TEST: health data</string>
    <string name="select_a_patient">Select a Patient</string>
    <string name="caretaker_profile">Caretaker Profile</string>
    <string name="_3501_80315_1">3501 80315 1</string>
    <string name="marilyn_bvarton">Marilyn Bvarton</string>
    <string name="_6_5_1980">6/5/1980</string>
    <string name="_31_solaris_drive_melbourne_vic_2767_australia">31 Solaris drive, Melbourne, VIC, 2767, Australia</string>
    <string name="phone_number">Phone number</string>
    <string name="_0399_832_791">0399-832-791</string>
    <string name="working_at">Working at</string>
    <string name="st_vincent_s_public_hospital_melbourne">St. Vincent\'s Public Hospital Melbourne</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_incident">Confirm Incident</string>
    <string name="confirm_false_alert">Confirm False Alert</string>
    <string name="alert">! Alert</string>
    <string name="recorded_time_09_49_am">Recorded time: 09:49 AM</string>
    <string name="zoe_tang_took_a_fall">Zoe Tang had just taken a fall!</string>
    <string name="verification_time_09_49_am">Verification time: 09:51 AM</string>
    <string name="provide_a_manual_input">Provide a Manual Input</string>
    <string name="add_your_input_here">Add your input here..</string>
    <string name="cancel">Cancel</string>
    <string name="detected_09_49_am">Detected : 09:49 AM</string>
    <string name="vertification_time_12_39_pm">Vertification time: 12:39 pm</string>
    <string name="patient_is_unconscious_and_bleeding_from_head">Patient is unconscious and bleeding from head</string>
    <string name="estimated_time_30_minutes">Estimated time : 30 minutes</string>
    <string name="call_ambulance">Call Ambulance</string>
    <string name="patient_daily_report">Patient Daily Report</string>
    <string name="reported_by">Reported By</string>
    <string name="report_date">Report date</string>
    <string name="today">today</string>
    <string name="progress_notes">Progress Notes</string>
    <string name="patient_normal_daily_visit">Patient normal, daily visit...</string>
    <string name="alert_word">Alert</string>
    <string name="urgent_medical_attention">Urgent Medical Attention</string>
    <string name="new_patient">New Patient</string>
    <string name="daily_report">Daily Report</string>
    <string name="patient_list">Patient List</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="ok">OK</string>
    <string name="false_alert_noted_and_zoe_s_activity_profile_has_been_updated_n_n_all_admins_have_been_notified">False Alert Noted And Zoe Tang\'s Activity Profile Has Been Updated \n \n All admins have been notified.</string>
    <string name="false_alert_confirmed">False Alert Confirmed!</string>
    <string name="password_hint">Enter password</string>
    <string name="login_register_btn">Register</string>
    <string name="login_google_btn">Sign in with Google</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="email_hint">Email</string>
    <string name="login_login_button">Login</string>
    <string name="login_welcome">Welcome</string>
    <string name="content_description_gopher_logo">Logo for the Gopher Company</string>
    <string name="content_description_corner_blue_flower_shape">Corner Blue flower shape</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_enter_your_email_to_received_reset_link">Enter Your Email To Received Reset Link.</string>
    <string name="add_task">Add Task</string>
    <string name="task_list">Task List</string>
    <string name="nurse_roster">Nurse Roster</string>
    <string name="module1_title">Module 1: Basic Caregiving Skills</string>
    <string name="module2_title">Module 2: Advanced Medical Procedures</string>
    <string name="module3_title">Module 3: Emotional Support and Communication</string>
    <string name="training">Training</string>
    <string name="welcome_to_training">Welcome to the Training Module</string>
    <string name="module_1">Module 1: Basic Caregiving Skills</string>
    <string name="module_2">Module 2: Advanced Medical Procedures</string>
    <string name="module_3">Module 3: Emotional Support and Communication</string>
    <string name="emotional_intelligence_communication">• Emotional Intelligence and Communication</string>
    <string name="emotional_intelligence_communication_description">This section covers the role of emotional intelligence in effective communication.</string>
    <string name="start_button_text">Start</string>
    <string name="monitor_patient">Monitor a Patient</string>
    <string name="exercise_portal">Exercise Portal</string>
</resources>