<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />

    <item android:id="@+id/menuNofications"
        android:icon="@drawable/notifcations"
        android:title="@string/notifications" />

    <item android:id="@+id/menuCollection"
        android:icon="@drawable/collection"
        android:title="@string/collection" />

    <item android:id="@+id/menuInbox"
        android:icon="@drawable/inbox"
        android:title="@string/inbox" />

    <item android:id="@+id/menuOrders"
        android:icon="@drawable/menu_new_user"
        android:title="@string/new_user" />

    <item android:title="@string/others">

        <menu>
            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/support"
                android:title="@string/support" />

            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/about"
                android:title="@string/about" />
        </menu>

    </item>


</menu>