<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/emotional_intelligence_communication_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotional_intelligence_communication"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <TextView
        android:id="@+id/emotional_intelligence_communication_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotional_intelligence_communication_description"
        android:textSize="16sp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/start_emotional_intelligence_communication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:layout_gravity="center"
        android:layout_marginTop="32dp" />

</LinearLayout>
