<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModulesActivity">

    <!-- Module 1 -->
    <TextView
        android:id="@+id/module1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module1_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />

    <!-- Module 2 -->
    <TextView
        android:id="@+id/module2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module2_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/module1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Module 3 -->
    <TextView
        android:id="@+id/module3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/module3_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/module2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



